cloned base-jekyll-prototype

--- a/_pages/404.md
+++ b/_pages/404.md
@@ -1,8 +1,9 @@
 ---
 title: Pagina niet gevonden
-layout: page
 permalink: /404
-description: Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ute et dolore magna aliqua
+layout: page
+meta:
+  description: Deze pagina bestaat niet (meer)
 ---
 
 Deze pagina bestaat niet (meer),...
