--- a/_collections/_posts/2018-03-28-project-02.md
+++ b/_collections/_posts/2018-03-28-project-02.md
@@ -10,9 +10,9 @@ meta:
   title: Een titel met zoveel mogelijk kernwoorden
 images:
   - alt: Plan
-    url: "media/plan.jpg"
+    url: /media/plan.jpg
   - alt: Lijntekening
-    url: "media/lijntekening.png"
+    url: /media/lijntekening.png
 published: true
 ---
 Meer informatie over project 02
