cloned base-jekyll-prototype

--- a/_collections/_posts/2018-03-28-project-03.md
+++ b/_collections/_posts/2018-03-28-project-03.md
@@ -1,5 +1,5 @@
 ---
-title: Project 02
+title: Project 03
 subtitle: Verbouwing
 date: '2018-03-28 12:00'
 layout: post
@@ -9,7 +9,9 @@ meta:
     architect, nieuwbouw, verbouwingen, renovaties...
   title: Een titel met zoveel mogelijk kernwoorden
 images:
-  - alt: Project 2
-    url: /media/project-02-01.jpg
+  - alt: Project 3 oud
+    url: /media/project-03-01.jpg
+  - alt: Project 3 nieuw
+    url: /media/project-03-02.jpg
 published: true
 ---
