--- a/_collections/_posts/2017-03-28-project-01.md
+++ b/_collections/_posts/2017-03-28-project-01.md
@@ -7,10 +7,6 @@ meta:
   title: Een titel met zoveel mogelijk kernwoorden
   description: Een kort en bondige omschrijving met zoveel mogelijk kernwoorden zoals architect, nieuwbouw, verbouwingen, renovaties...
 images:
-  - url: /media/plan.jpg
-    alt: Plan
-  - url: /media/lijntekening.png
-    alt: Lijntekening
+  - url: /media/project-01-01.jpg
+    alt: Project 1
 ---
-
-Meer informatie over project 01
