--- a/_pages/404.md
+++ b/_pages/404.md
@@ -1,9 +1,10 @@
 ---
-title: Pagina niet gevonden
+title: '404'
 permalink: /404
 layout: page
 meta:
   description: Deze pagina bestaat niet (meer)
+  title: Pagina niet gevonden
 ---
 
 Deze pagina bestaat niet (meer),...
