--- a/_pages/404.md
+++ b/_pages/404.md
@@ -6,5 +6,4 @@ meta:
   description: Deze pagina bestaat niet (meer)
   title: Pagina niet gevonden
 ---
-
-Deze pagina bestaat niet (meer),...
+## Deze pagina bestaat niet (meer),...
