Update Projects “2018-03-28-project-03”

--- a/_collections/_posts/2018-03-28-project-03.md
+++ b/_collections/_posts/2018-03-28-project-03.md
@@ -6,7 +6,7 @@ layout: post
 meta:
   description: >-
     Een kort en bondige omschrijving met zoveel mogelijk kernwoorden zoals
-    architect, nieuwbouw, verbouwingen, renovaties...
+    architect, nieuwbouw, verbouwingen, renovaties,...
   title: Een titel met zoveel mogelijk kernwoorden
 images:
   - alt: Project 3 oud
@@ -15,3 +15,4 @@ images:
     url: /media/project-03-02.jpg
 published: true
 ---
+
