Update Projects “2018-03-28-project-02”

--- a/_collections/_posts/2018-03-28-project-02.md
+++ b/_collections/_posts/2018-03-28-project-02.md
@@ -5,11 +5,20 @@ date: '2018-03-28 12:00'
 layout: post
 meta:
   description: >-
-    Een kort en bondige omschrijving met zoveel mogelijk kernwoorden zoals
-    architect, nieuwbouw, verbouwingen, renovaties...
-  title: Een titel met zoveel mogelijk kernwoorden
+    Architect Steven Baecke doet nieuwbouw, verbouwingen, renovaties...
+
+    Elk project is een unieke samenwerking tussen architect en bouwheer, dat
+    leidt tot een goed resultaat. De uitwisseling van een visie of een idee is
+    de basis voor een ontwerp dat architecturaal en stedenbouwkundig een
+    meerwaarde kan bieden. 
+  title: >-
+    Totale verbouwing in Assenede van een eengezinswoning. Interieur en
+    exterieur. Extra verdieping en dak.
 images:
   - alt: Project 2
     url: /media/project-02-01.jpg
 published: true
 ---
+**Assenede**,\
+totale verbouwing\
+nieuwe verdieping en dak
