Update Projects “2018-03-28-project-03”

--- a/_collections/_posts/2018-03-28-project-03.md
+++ b/_collections/_posts/2018-03-28-project-03.md
@@ -5,9 +5,19 @@ date: '2018-03-28 12:00'
 layout: post
 meta:
   description: >-
-    Een kort en bondige omschrijving met zoveel mogelijk kernwoorden zoals
-    architect, nieuwbouw, verbouwingen, renovaties,...
-  title: Een titel met zoveel mogelijk kernwoorden
+    Verbouwing eengezinswoning met een nieuwe verdieping. Extra volume. Nieuwe
+    ruimte voor slaapkamers.
+
+    Architect Steven Baecke doet nieuwbouw, verbouwingen, renovaties,
+    regularisatie...
+
+    Elk project is een unieke samenwerking tussen architect en bouwheer, dat
+    leidt tot een goed resultaat. De uitwisseling van een visie of een idee is
+    de basis voor een ontwerp dat architecturaal en stedenbouwkundig een
+    meerwaarde kan bieden. 
+  title: >-
+    Verbouwing eengezinswoning met een nieuwe verdieping. Extra volume. Nieuwe
+    ruimte voor slaapkamers.
 images:
   - alt: Project 3 oud
     url: /media/project-03-01.jpg
@@ -15,4 +25,7 @@ images:
     url: /media/project-03-02.jpg
 published: true
 ---
+**Wervik**,\
+extra verdieping
 
+\- in bouwaanvraag -
