Update Projects “2018-03-28-project-02”

--- a/_collections/_posts/2018-03-28-project-02.md
+++ b/_collections/_posts/2018-03-28-project-02.md
@@ -21,6 +21,5 @@ published: true
 ---
 **Assenede**,\
 totale verbouwing\
-nieuwe verdieping en dak 
-
-\- in uitvoering-
+nieuwe verdieping en dak\
+-in uitvoering-
