Update Projects “2018-03-28-project-02”

--- a/_collections/_posts/2018-03-28-project-02.md
+++ b/_collections/_posts/2018-03-28-project-02.md
@@ -19,7 +19,7 @@ images:
     url: /media/project-02-01.jpg
 published: true
 ---
-**Assenede**,\
+**Assenede**\
 totale verbouwing\
 nieuwe verdieping en dak\
 -in uitvoering-
