--- a/_collections/_posts/2017-03-28-project-01.md
+++ b/_collections/_posts/2017-03-28-project-01.md
@@ -23,7 +23,7 @@ images:
     url: /media/project-01-01.jpg
 published: true
 ---
-**Zuiddorpe**,\
+**Zuiddorpe**\
 verbouwing interieur en exterieur\
 nieuwe gevel en schrijnwerk\
 -in uitvoering-
