--- a/_pages/404.md
+++ b/_pages/404.md
@@ -3,7 +3,9 @@ title: '404'
 permalink: /404
 layout: page
 meta:
-  description: Deze pagina bestaat niet (meer)
+  description: |-
+    Deze pagina bestaat niet (meer)
+    Architect Steven Baecke
   title: Pagina niet gevonden
 ---
 ## Deze pagina bestaat niet (meer),...
