--- a/_collections/_posts/2017-03-28-project-01.md
+++ b/_collections/_posts/2017-03-28-project-01.md
@@ -24,6 +24,5 @@ images:
 published: true
 ---
 **Zuiddorpe**\
-verbouwing interieur en exterieur\
-nieuwe gevel en schrijnwerk\
--in uitvoering-
+Programma: verbouwing interieur en exterieur\
+Status: in uitvoering
