--- a/_collections/_posts/2018-03-28-project-02.md
+++ b/_collections/_posts/2018-03-28-project-02.md
@@ -20,6 +20,5 @@ images:
 published: true
 ---
 **Assenede**\
-totale verbouwing\
-nieuwe verdieping en dak\
--in uitvoering-
+Programma: totale verbouwing\
+Status: in uitvoering
