Update Projects “2018-03-28-project-03”

--- a/_collections/_posts/2018-03-28-project-03.md
+++ b/_collections/_posts/2018-03-28-project-03.md
@@ -26,5 +26,5 @@ images:
 published: true
 ---
 **Wervik**\
-extra verdieping\
--bouwaanvraag-
+Programma: verbouwing, verdieping\
+Status: bouwaanvraag
